--- a/home.css
+++ b/home.css
@@ -13,7 +13,7 @@
 
 
 #tshirts{
-    background-color:aqua;
+    background-color:#ffc966;
     min-height:150px;
     border-radius:3px;
 }
@@ -33,7 +33,7 @@
 }
 
 #pants{
-    background-color:aqua;
+    background-color:#ffc966;
     min-height:150px;
     border-radius:3px;
 }
@@ -53,7 +53,7 @@
 }
 
 #sunglasses{
-    background-color:aqua;
+    background-color:#ffc966;
     min-height:150px;
     border-radius:3px;
 }
@@ -73,7 +73,7 @@
 }
 
 #shoes{
-    background-color:aqua;
+    background-color:#ffc966;
     min-height:150px;
     border-radius:3px;
 }
@@ -91,3 +91,48 @@
     color:white;
     font-size:1.25em;
 }
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif; 
+}
+
+nav {
+    background-color: #ffdfa4;
+    padding: 10px 0; 
+}
+
+#container {
+    max-width: 900px;
+    margin: 0 auto; 
+}
+
+.menu {
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    justify-content: center; 
+}
+
+.menu li {
+    border-left: 2px solid orange;
+    padding: 0 20px; 
+    text-align: center; 
+}
+
+.menu li:first-child {
+    border-left: none; 
+}
+
+.menu li a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: hsl(60, 7%, 3%);
+}
+
+.menu li a:hover {
+    background-color: #ffc966; 
+}
+
+/*nav bar css*/
