--- a/Martin_work/shoes.css
+++ b/Martin_work/shoes.css
@@ -9,6 +9,7 @@
 }
 
 #image_shoes_1 {
+    z-index: 1;
     position: absolute;
     width: 86%;
     height: 45%;
@@ -20,62 +21,41 @@
 
 #add_to_card_shoes_1 {
     position: absolute;
-    width: 30%;
-    height: 4%;
-    margin-top: 100%;
-    margin-left: 65%;  
+    font-size: 16px;
+    width: 35%;
+    height: 10%;
+    margin-top: 93%;
+    margin-left: 50%;  
     background-color: black;  
     color: white;
 }
 
+#add_to_card_shoes_1:hover {
+    background-color: rgb(69, 69, 69);
+}
+
 #description_shoes_1 {
     position: absolute;
-    margin-top: 65%;
+    margin-top: 60%;
     text-align: center;
+    width: 95%;
 }
 
-/*navbar style */
-
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
+#price_shoes_1 {
+    position: absolute;
+    margin-top: 95%;
+    margin-left: 27%;   
 }
 
-nav {
-    background-color: #ffdfa4;
-    padding: 10px 0; 
+#right_arrow {
+    display: none;
+    z-index: 2;
+    position: absolute;
+    width: 20%;
+    margin-top: 20%;
+    margin-left: 83%;
 }
 
-#container {
-    max-width: 900px;
-    margin: 0 auto; 
-}
-
-.menu {
-    padding: 0;
-    list-style-type: none;
-    display: flex;
-    justify-content: center; 
-}
-
-.menu li {
-    border-left: 2px solid orange;
-    padding: 0 20px;
-    text-align: center; 
-}
-
-.menu li:first-child {
-    border-left: none;
-}
-
-
-.menu li a {
+#image_shoes_1:hover #right_arrow{
     display: block;
-    padding: 10px;
-    text-decoration: none;
-    color: hsl(60, 7%, 3%);
-}
-
-.menu li a:hover {
-    background-color: #ffc966;
 }
