--- a/Martin_work/shoes.css
+++ b/Martin_work/shoes.css
@@ -66,3 +66,77 @@
     margin-top: 20%;
     margin-left: -3%;
 }
+
+
+
+
+
+
+#shoes_offer2 {
+    position: absolute;
+    border: 2px solid black;
+    border-radius: 4px;
+    width: 31%;
+    height: 70%;
+    margin-top: 44px;
+    margin-left: 33%;
+}
+
+#image_shoes_2 {
+    z-index: 1;
+    position: absolute;
+    width: 86%;
+    height: 45%;
+    padding-left: 7%;
+    padding-right: 7%;
+    border-radius: 4px;
+    background-color: antiquewhite;
+}
+
+#add_to_card_shoes_2 {
+    position: absolute;
+    font-size: 16px;
+    width: 35%;
+    height: 10%;
+    margin-top: 93%;
+    margin-left: 50%;  
+    background-color: black;  
+    color: white;
+}
+
+#add_to_card_shoes_2:hover {
+    background-color: rgb(69, 69, 69);
+}
+
+#description_shoes_2 {
+    position: absolute;
+    margin-top: 60%;
+    text-align: center;
+    width: 95%;
+}
+
+#price_shoes_2 {
+    position: absolute;
+    margin-top: 95%;
+    margin-left: 27%;   
+}
+
+#right_arrow2 {
+    display: none;
+    z-index: 2;
+    position: absolute;
+    width: 20%;
+    height: 10%;
+    margin-top: 20%;
+    margin-left: 83%;
+}
+
+#left_arrow2 {
+    display: none;
+    z-index: 2;
+    position: absolute;
+    width: 20%;
+    height: 10%;
+    margin-top: 20%;
+    margin-left: -3%;
+}
