--- a/Dido_work/sunglasses.css
+++ b/Dido_work/sunglasses.css
@@ -1,3 +1,4 @@
+
 #sunglasses_offer1 {
     position: absolute;
     border: 2px solid black;
@@ -19,18 +20,18 @@
     background-color: antiquewhite;
 }
 
-#add_to_card_sunglasses_1 {
+#add_to_cart_sunglasses_1 {
     position: absolute;
     font-size: 16px;
     width: 35%;
     height: 10%;
-    margin-top: 93%;
-    margin-left: 50%;  
+    bottom: 10px;
+    right: 5%;
     background-color: black;  
     color: white;
 }
 
-#add_to_card_sunglasses_1:hover {
+#add_to_cart_sunglasses_1:hover {
     background-color: rgb(69, 69, 69);
 }
 
@@ -44,8 +45,8 @@
 
 #price_sunglasses_1 {
     position: absolute;
-    margin-top: 95%;
-    margin-left: 27%;   
+    bottom: 10px; 
+    left: 5%;
 }
 
 #right_arrow1 {
@@ -68,7 +69,7 @@
     margin-left: -3%;
 }
 
-/* offer 2 */
+/* Offer 2 */
 #sunglasses_offer2 {
     position: absolute;
     border: 2px solid black;
@@ -90,18 +91,18 @@
     background-color: antiquewhite;
 }
 
-#add_to_card_sunglasses_2 {
+#add_to_cart_sunglasses_2 {
     position: absolute;
     font-size: 16px;
     width: 35%;
     height: 10%;
-    margin-top: 93%;
-    margin-left: 50%;  
+    bottom: 10px; 
+    right: 5%;
     background-color: black;  
     color: white;
 }
 
-#add_to_card_sunglasses_2:hover {
+#add_to_cart_sunglasses_2:hover {
     background-color: rgb(69, 69, 69);
 }
 
@@ -115,8 +116,8 @@
 
 #price_sunglasses_2 {
     position: absolute;
-    margin-top: 95%;
-    margin-left: 27%;   
+    bottom: 10px;
+    left: 5%;
 }
 
 #right_arrow2 {
