Corrected path to tshirts form sunglasses and change the cursor type when the buttons is hovered

--- a/Martin_work/shoes.css
+++ b/Martin_work/shoes.css
@@ -28,6 +28,7 @@
     margin-left: 50%;  
     background-color: black;  
     color: white;
+    cursor: pointer;
 }
 
 #add_to_card_shoes_1:hover {
@@ -102,6 +103,7 @@
     margin-left: 50%;  
     background-color: black;  
     color: white;
+    cursor: pointer;
 }
 
 #add_to_card_shoes_2:hover {
@@ -177,6 +179,7 @@
     margin-left: 50%;  
     background-color: black;  
     color: white;
+    cursor: pointer;
 }
 
 #add_to_card_shoes_3:hover {
