--- a/Dido_work/sunglasses.css
+++ b/Dido_work/sunglasses.css
@@ -29,6 +29,7 @@
     right: 5%;
     background-color: black;  
     color: white;
+    cursor: pointer;
 }
 
 #add_to_cart_sunglasses_1:hover {
@@ -100,6 +101,7 @@
     right: 5%;
     background-color: black;  
     color: white;
+    cursor: pointer;
 }
 
 #add_to_cart_sunglasses_2:hover {
