--- a/Dido_work/sunglasses.css
+++ b/Dido_work/sunglasses.css
@@ -17,7 +17,7 @@
     padding-left: 7%;
     padding-right: 7%;
     border-radius: 4px;
-    background-color: antiquewhite;
+    background-color: rgb(223, 218, 212);
 }
 
 #add_to_cart_sunglasses_1 {
@@ -89,7 +89,7 @@
     padding-left: 7%;
     padding-right: 7%;
     border-radius: 4px;
-    background-color: antiquewhite;
+    background-color: rgb(223, 218, 212);
 }
 
 #add_to_cart_sunglasses_2 {
@@ -133,6 +133,78 @@
 }
 
 #left_arrow2 {
+    display: none;
+    z-index: 2;
+    position: absolute;
+    width: 20%;
+    height: 10%;
+    margin-top: 20%;
+    margin-left: -3%;
+}
+
+/* Offer 3 */
+#sunglasses_offer3 {
+    position: absolute;
+    border: 2px solid black;
+    border-radius: 4px;
+    width: 31%;
+    height: 70%;
+    margin-top: 44px;
+    margin-left: 67%;
+}
+
+#image_sunglasses_3 {
+    z-index: 1;
+    position: absolute;
+    width: 86%;
+    height: 45%;
+    padding-left: 7%;
+    padding-right: 7%;
+    border-radius: 4px;
+    background-color: rgb(223, 218, 212);
+}
+
+#add_to_cart_sunglasses_3 {
+    position: absolute;
+    font-size: 16px;
+    width: 35%;
+    height: 10%;
+    bottom: 10px; 
+    right: 5%;
+    background-color: black;  
+    color: white;
+    cursor: pointer;
+}
+
+#add_to_cart_sunglasses_3:hover {
+    background-color: rgb(69, 69, 69);
+}
+
+#description_sunglasses_3 {
+    position: absolute;
+    margin-top: 60%;
+    text-align: center;
+    width: 95%;
+    padding-left: 10px;
+}
+
+#price_sunglasses_3 {
+    position: absolute;
+    bottom: 10px;
+    left: 5%;
+}
+
+#right_arrow3 {
+    display: none;
+    z-index: 2;
+    position: absolute;
+    width: 20%;
+    height: 10%;
+    margin-top: 20%;
+    margin-left: 83%;
+}
+
+#left_arrow3 {
     display: none;
     z-index: 2;
     position: absolute;
