--- a/Martin_work/shoes.css
+++ b/Martin_work/shoes.css
@@ -1,3 +1,7 @@
+body{
+    background-color:#ffbb98;
+}
+
 #shoes_offer1 {
     position: absolute;
     border: 2px solid black;
@@ -6,6 +10,7 @@
     height: 70%;
     margin-top: 44px;
     margin-left: 1%;
+    background-color: #fbe0c3;
 }
 
 #image_shoes_1 {
@@ -16,7 +21,7 @@
     padding-left: 7%;
     padding-right: 7%;
     border-radius: 4px;
-    background-color: antiquewhite;
+    background-color: rgb(223, 218, 212);
 }
 
 #add_to_card_shoes_1 {
@@ -81,6 +86,7 @@
     height: 70%;
     margin-top: 44px;
     margin-left: 34%;
+    background-color: #fbe0c3;
 }
 
 #image_shoes_2 {
@@ -91,7 +97,7 @@
     padding-left: 7%;
     padding-right: 7%;
     border-radius: 4px;
-    background-color: antiquewhite;
+    background-color: rgb(223, 218, 212);
 }
 
 #add_to_card_shoes_2 {
@@ -157,6 +163,7 @@
     height: 70%;
     margin-top: 44px;
     margin-left: 67%;
+    background-color: #fbe0c3;
 }
 
 #image_shoes_3 {
@@ -167,7 +174,7 @@
     padding-left: 7%;
     padding-right: 7%;
     border-radius: 4px;
-    background-color: antiquewhite;
+    background-color: rgb(223, 218, 212);
 }
 
 #add_to_card_shoes_3 {
