--- a/Martin_work/trousers.css
+++ b/Martin_work/trousers.css
@@ -1,3 +1,8 @@
+body{
+    background-color:#ffbb98;
+}
+
+
 #tr_offer1 {
     position: absolute;
     border: 2px solid black;
@@ -6,6 +11,7 @@
     height: 70%;
     margin-top: 44px;
     margin-left: 1%;
+    background-color: #fbe0c3;
 }
 
 #image_tr_1 {
@@ -16,7 +22,7 @@
     padding-left: 30%;
     padding-right: 30%;
     border-radius: 4px;
-    background-color: antiquewhite;
+    background-color: rgb(223, 218, 212);
 }
 
 #add_to_card_tr_1 {
@@ -81,6 +87,7 @@
     height: 70%;
     margin-top: 44px;
     margin-left: 34%;
+    background-color: #fbe0c3;
 }
 
 #image_tr_2 {
@@ -91,7 +98,7 @@
     padding-left: 31.5%;
     padding-right: 31.5%;
     border-radius: 4px;
-    background-color: antiquewhite;
+    background-color: rgb(223, 218, 212);
 }
 
 #add_to_card_tr_2 {
@@ -157,6 +164,7 @@
     height: 70%;
     margin-top: 44px;
     margin-left: 67%;
+    background-color: #fbe0c3;
 }
 
 #image_tr_3 {
@@ -167,7 +175,7 @@
     padding-left: 31.5%;
     padding-right: 31.5%;
     border-radius: 4px;
-    background-color: antiquewhite;
+    background-color: rgb(223, 218, 212);
 }
 
 #add_to_card_tr_3 {
